# metarecogen

./: .gitignore  .gitmodules  CONFIG.md  LICENSE  README.md  ckan_extract.py  extractm.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: python-app.yml
data/templates/ISO19115-3/: main.j2
data/templates/iso19115-3/: main.j2
db/: README.md
src/: ISO19115_3_extract.py  ISO19139_extract-2.py  ISO19139_extract.py  ISO19139_extract2.py  add_coords.py  add_links.py  add_model_keyw.py  bedrock_summary.py  ckan_extract.py  config.py  constants.py  extract_keyw.py  extract_summ.py  extractor.py  keywords.py  local_types.py  make_summary.py  oai_extract.py  ollama_summary.py  pdf_extract.py  pdf_helper.py  process.py  summary.py
src/ckan2gn/: .ckan_to_gn.py.swp  .env  Dockerfile  README.md  ckan_to_gn.py
tests/: helpers.py  namespaces.py  test.py  test_ISO19115_3.py  test_ISO19139.py  test_ckan.py  test_cli.py  test_oai.py  test_pdf.py  unit_test.py  westgawler_19115-3-orig.xml
