[tool.pdm]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = ["tika", "yake", "pytextrank", "spacy", "PyPDF2", "requests", "geojson", "pygeometa", "sickle", "transformers", "torch"]
requires-python = ">=3.9"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
