[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
    "yake",
    "PyPDF2",
    "requests",
    "geojson",
    "pygeometa",
    "sickle",
    "lxml>=4.9.2",
    "pyproj>=3.5.0",
    "sentencepiece>=0.2.0",
    "protobuf>=5.26.0",
    "semantic-text-splitter>=0.7.0",
    "boto3>=1.34.68",
    "botocore>=1.34.83",
    "pytest>=8.1.1",
]
requires-python = ">=3.9"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "-ra -q"
]
minversion = "6.0"
testpaths = [
    "tests"
]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=7.0.0",
]
