[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "metarecogen"
version = "1.1.0"
dependencies = [
    "yake",
    "requests",
    "geojson",
    "pygeometa",
    "sickle",
    "lxml",
    "pyproj>=3.5.0",
    "sentencepiece",
    "protobuf",
    "semantic-text-splitter",
    "boto3",
    "botocore",
    "pytest",
    "docling>=2.55.1",
]
requires-python = ">=3.10"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "-ra -q"
]
minversion = "6.0"
testpaths = [
    "tests"
]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=7.0.0",
]
